--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/essmann/essGames#readme",
   "devDependencies": {
     "electron": "^37.2.4"
+  },
+  "dependencies": {
+    "sqlite3": "^5.1.7"
   }
 }
