--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start": "electron .",
+    "build": "electron-builder"
   },
   "repository": {
     "type": "git",
@@ -18,9 +19,47 @@
   },
   "homepage": "https://github.com/essmann/essGames#readme",
   "devDependencies": {
-    "electron": "^37.2.4"
+    "electron": "^37.2.4",
+    "electron-builder": "^26.0.12"
   },
   "dependencies": {
     "sqlite3": "^5.1.7"
+  },
+  "build": {
+    "appId": "com.essmann03.essgames",
+    "productName": "essGames",
+    "files": [
+  "build/dist/**/*",
+  "main.js",
+  "package.json",
+  "node_modules/**/*",
+  "sqlite/games.db",
+  "preload.js"
+],
+"asarUnpack": [
+  "sqlite/games.db"
+],
+
+    "directories": {
+      "buildResources": "assets"
+    },
+    "mac": {
+      "target": [
+        "dmg",
+        "zip"
+      ]
+    },
+    "win": {
+      "target": [
+        "nsis",
+        "zip"
+      ]
+    },
+    "linux": {
+      "target": [
+        "AppImage",
+        "deb"
+      ]
+    }
   }
 }
