--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 allGames.db filter=lfs diff=lfs merge=lfs -text
 sqlite/allGames.db filter=lfs diff=lfs merge=lfs -text
+sqlite/posters.db filter=lfs diff=lfs merge=lfs -text
