--- a/package.json
+++ b/package.json
@@ -23,8 +23,13 @@
     "electron-builder": "^26.0.12"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.0",
+    "@mui/x-date-pickers": "^8.9.2",
     "convert-csv-to-json": "^3.5.0",
     "csv-parser": "^3.2.0",
+    "dayjs": "^1.11.13",
     "sqlite3": "^5.1.7"
   },
   "build": {
