--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "convert-csv-to-json": "^3.5.0",
     "csv-parser": "^3.2.0",
     "dayjs": "^1.11.13",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "uuid": "^11.1.0"
   },
   "build": {
     "appId": "com.essmann03.essgames",
