--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 sqlite/catalogGames.db filter=lfs diff=lfs merge=lfs -text
 sqlite/userGames.db filter=lfs diff=lfs merge=lfs -text
+*.db filter=lfs diff=lfs merge=lfs -text
